@@ -1,6 +1,8 @@
 20110817
  - (tim) [mac.c myproposal.h] Wrap SHA256 and SHA512 in ifdefs for
    OpenSSL 0.9.7. ok djm
+ - (djm) [ openbsd-compat/bsd-cygwin_util.c openbsd-compat/bsd-cygwin_util.h]
+   binary_pipe is no longer required on Cygwin; patch from Corinna Vinschen
 
 20110812
  - (dtucker) [openbsd-compat/port-linux.c] Bug 1924: Improve selinux context
